This is the true project

--- a/lightning/index.html
+++ b/lightning/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <script src="sketch.js"></script>
+    <script src="Flash.js"></script>
+    <script src="sleep.js"></script>
   
 
 </body></html>
